RESOLVED FIXED277299
WebCore::Timer should assert that web thread lock is held or the web thread is disabled
https://bugs.webkit.org/show_bug.cgi?id=277299
Summary WebCore::Timer should assert that web thread lock is held or the web thread i...
Ryosuke Niwa
Reported 2024-07-29 16:40:40 PDT
WebCore::Timer should assert that the web thread lock is held or the web thread is disabled.
Attachments
Ryosuke Niwa
Comment 1 2024-07-29 16:46:17 PDT
David Kilzer (:ddkilzer)
Comment 2 2024-07-30 11:12:04 PDT
See also: Bug 168008: Audit WebCore uses of RunLoop::main for USE(WEB_THREAD) iOS WebKit1 <https://bugs.webkit.org/show_bug.cgi?id=168008> Bug 172390: [iOS]: RunLoop::main().dispatch() needs to take into account USE_WEB_THREAD <https://bugs.webkit.org/show_bug.cgi?id=172390> Bug 233967: Add a version of ThreadAssertions that treats UI and Web thread as the same <https://bugs.webkit.org/show_bug.cgi?id=233967>
David Kilzer (:ddkilzer)
Comment 3 2024-07-30 11:14:41 PDT
This is basically a dupe of this: Bug 185330: [iOS] Add assert to catch improper use of WebCore::Timer in UI Process <https://bugs.webkit.org/show_bug.cgi?id=185330>
EWS
Comment 4 2024-07-30 16:27:35 PDT
Committed 281614@main (a01578c7c53b): <https://commits.webkit.org/281614@main> Reviewed commits have been landed. Closing PR #31423 and removing active labels.
Radar WebKit Bug Importer
Comment 5 2024-07-30 16:28:13 PDT
Note You need to log in before you can comment on or make changes to this bug.