WebCore::Timer should assert that web thread lock is held or the web thread is disabled https://bugs.webkit.org/show_bug.cgi?id=277299

Reviewed by Wenson Hsieh.

Release assert WebThreadIsLockedOrDisabled in TimerBase::TimerBase and TimerBase::setNextFireTime.

Because WebCore::Timer always schedules timer in the web thread, it is incorrect to use this class
in the main thread of the UI process (which may or may not also use WebKitLegacy).

* Source/WebCore/platform/Timer.cpp:
(WebCore::TimerBase::TimerBase):
(WebCore::TimerBase::setNextFireTime):

Canonical link: https://commits.webkit.org/281614@main